--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <header class="header">
@@ -33,8 +35,14 @@
         <a href="#">Hire Me</a>
         <a href="#">Let's Talk</a>
     </div>
-
     </div>
+    <div class="home-icon">
+        <a href="#"> <i class='bx bxl-facebook'></i></a>
+        <a href="#"><i class='bx bxl-linkedin'></i> </a>
+        <a href="#"><i class='bx bxl-github'></i> </a>
+        
+    </div>
+    <span class="home-imgHover"></span>
 </section>
 </body>
 </html>
