--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#"  class="logo">
+        <a href="index.html"  class="logo">
             <div class="headlogo">
             <div class="nocolor">Nag</div>
             <div class="logocolor">Dev</div>
@@ -19,7 +19,7 @@
     
     <nav class="navbar">
     <a href="#" class="active">Home</a>
-    <a href="#">About</a>
+    <a href="About.html">About</a>
     <a href="#">Services</a>
     <a href="#">Portfolio</a>
     <a href="#">Contact</a>
@@ -37,7 +37,7 @@
     </div>
     </div>
     <div class="home-icon">
-        <a href="#"> <i class='bx bxl-facebook'></i></a>
+        <a href="https://www.facebook.com/nagendra.bist.1"> <i class='bx bxl-facebook'></i></a>
         <a href="#"><i class='bx bxl-linkedin'></i> </a>
         <a href="#"><i class='bx bxl-github'></i> </a>
         
